# Checkpoint25_final_project

./: .gitignore  README.md  base.yaml  launch_cp25_ros1
Docker_sim/Checkpoint25/: Dockerfile_Ros1Bridge  Dockerfile_Ros1_Web_Bridge  README.md  bridge.yaml  docker-compose-ros2sim_only.yml  docker-compose.yml  dockerfile_ros2_moveit_sim  dockerfile_ros2_moveit_sim_only  dockerfile_webapp  entrypoint_ros2_moveit_sim.sh  entrypoint_ros2_moveit_sim_only.sh  entrypoint_webbridge.sh  tf2_web.launch  web2.launch
Docker_sim/dockerRos2Talker_dockerRos1Bridge_dockerRos1Listener/: Dockerfile_Ros1Bridge  Dockerfile_Ros2  README.md  bridge.yaml  docker-compose-ex1a.yml  docker-compose-talker-listener.yml
Docker_sim/dockerRos2USBcam_dockerRos1Bridge_dockerRos1ShowImage/: Dockerfile  README.md
Docker_sim/dockerRos2USBcam_dockerRos1Bridge_dockerRos1ShowImage/d2cam_bridge_d1show/: Dockerfile_Ros1Bridge  Dockerfile_Ros2  README.md  docker-compose.yml  docker-compose_r2cam.yml
Docker_sim/dockerRos2USBcam_dockerRos1Bridge_dockerRos1ShowImage/docker_ros1USB_ros1_show/: Dockerfile  README.md  docker-compose.yml
Docker_sim/dockerRos2USBcam_dockerRos1Bridge_dockerRos1ShowImage/docker_ros2USB_ros2_show/: README.md  docker-compose.yml
Docker_sim/dockerRos2USBcam_dockerRos1Bridge_dockerRos1WebBridge_webShowImage/: README.md  docker-compose_r2cam.yml  entrypoint_webbridge.sh
Docker_sim/dockerTalker_dockerListener/: docker-compose-talker-listener.yml
Docker_sim/dockerTalker_dockerListener2/: Dockerfile  README.md
Docker_sim/dockerTalker_hostListener/: Dockerfile  README.md  cyclonedds.xml  docker-compose-talker-hostListener.yml
Docker_sim/docker_selected_services_topics_to_bridge/: docker-compose_add2int_service.yml
Docker_sim/docker_service_bridge/: README.md  docker-compose_add2int_service.yml
cp25_custom_interfaces/: CMakeLists.txt  package.xml
cp25_custom_interfaces/srv/: PoseToMoveit.srv
cp25_realrobot_webapp/: README.md  index.html  main.js  ur_description
cp25_webapp/: COLCON_IGNORE  index.html  main.js  robotnik_sensors
cp25_webapp/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
launch_cp25/: CMakeLists.txt  package.xml
launch_cp25/launch/: ros2_realrobot.launch.py  ros2_sim.launch.py
launch_cp25/rviz/: cp25_realrobot_rviz.rviz  cp25_rviz.rviz
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: cartesian_trajectory.launch.py  move_real_arm_to_show_aruco_trajectory.launch.py  move_sim_arm_to_show_aruco_trajectory.launch.py
moveit2_scripts/src/: cartesian_trajectory.cpp  move_real_arm_to_show_aruco_trajectory.cpp  move_sim_arm_to_show_aruco_trajectory.cpp  test_trajectory.cpp
moveit_services/: CMakeLists.txt  package.xml
moveit_services/launch/: goal_pose_trajectory.launch.py  moveit_goto_pose_topic_server_service_client.launch.py  moveit_goto_pose_topic_service.launch.py  moveit_realrobot_goto_pose_topic_server_service_client.launch.py  moveit_realrobot_goto_pose_topic_service.launch.py  moveit_realrobot_hole_service.launch.py  moveit_realrobot_service.launch.py  moveit_sim_hole_service.launch.py  moveit_sim_service.launch.py  planning_sim_scene_service.launch.py
moveit_services/src/: goal_pose_trajectory.cpp  moveit_goto_pose_topic_server_service_client.cpp  moveit_goto_pose_topic_service.cpp  moveit_realrobot_hole_service.cpp  moveit_realrobot_service.cpp  moveit_sim_hole_service.cpp  moveit_sim_service.cpp  moveit_sim_service_linear.cpp  moveit_sim_service_org.cpp  planning_realrobot_scene_service.cpp  planning_sim_scene_service.cpp
my_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  name.srdf
my_tf_aruco/: CMakeLists.txt  package.xml
my_tf_aruco/scripts/: aruco_realrobot_to_camlink_send_to_tf2_pub.py  aruco_realrobot_to_camlink_tf_pub.py  aruco_to_camlink_send_to_tf2_pub.py  aruco_to_camlink_tf_pub.py  hole_realrobot_to_camlink_baselink_tf_pub_service.py  hole_to_camlink_baselink_send_to_tf2_pub.py  hole_to_camlink_baselink_tf_pub.py  hole_to_camlink_baselink_tf_pub_service.py  simpleSubscriber.py  test_cv_bridge.py  test_cv_bridge_realrobot.py
my_tf_aruco/src/: org__tf2_pub.cpp  tf2_hole_pub_service.cpp  tf2_pub.cpp  tf2_pub_service.cpp  tf2_realrobot_pub.cpp  tf2_realrobot_pub_org.cpp  tf2_realrobot_pub_service.cpp  tf2_realrobot_yaw180_aruco_pub.cpp
real_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
real_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  name.srdf  name.urdf.xacro
rviz/: cp25_realrobot_rviz.rviz  cp25_rviz.rviz
tmp/urdf/: ur.urdf.xacro  ur_moveit.urdf.xacro
